--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,8 @@
-@article{bonner2021understanding,
+@article{bonner2022understanding,
   title={Understanding the performance of knowledge graph embeddings in drug discovery},
   author={Bonner, Stephen and Barrett, Ian P and Ye, Cheng and Swiers, Rowan and Engkvist, Ola and Hoyt, Charles Tapley and Hamilton, William L},
-  journal={arXiv preprint arXiv:2105.10488},
-  year={2021}
+  journal={Artificial Intelligence in the Life Sciences},
+  pages={100036},
+  year={2022},
+  publisher={Elsevier}
 }
